--- a/WebAPI/Web.config
+++ b/WebAPI/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="CONN_STRING" connectionString="Data Source=.;Initial Catalog=Laboratorios;Integrated Security=True" />
+    <add name="CONN_STRING" connectionString="Data Source=.;Initial Catalog=PROYECTOBR;Integrated Security=True" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
