--- a/Entities-POJO/Entities-POJO.csproj
+++ b/Entities-POJO/Entities-POJO.csproj
@@ -48,12 +48,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationMessage.cs" />
-    <Compile Include="Customer.cs" />
     <Compile Include="BaseEntity.cs" />
+    <Compile Include="Customer.cs" />
     <Compile Include="ObjectDumper.cs" />
     <Compile Include="OptionList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserProfile.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
