--- a/DataAcess/DataAcess.csproj
+++ b/DataAcess/DataAcess.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Crud\CrudFactory.cs" />
     <Compile Include="Crud\ListOptionCrudFactory.cs" />
     <Compile Include="Crud\UserProfileCrudFactory.cs" />
+    <Compile Include="Crud\UsuarioCrudFactory.cs" />
     <Compile Include="Mapper\AppMessageMapper.cs" />
     <Compile Include="Mapper\CustomerMapper.cs" />
     <Compile Include="Mapper\EntityMapper.cs" />
@@ -54,6 +55,7 @@
     <Compile Include="Mapper\ISqlStaments.cs" />
     <Compile Include="Mapper\ListOptionMapper.cs" />
     <Compile Include="Mapper\UserProfileMapper.cs" />
+    <Compile Include="Mapper\UsuarioMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Dao\SqlDao.cs" />
     <Compile Include="Dao\SqlOperation.cs" />
