--- a/CoreAPI/CoreAPI.csproj
+++ b/CoreAPI/CoreAPI.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ListManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserProfileManager.cs" />
+    <Compile Include="UsuarioManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataAcess\DataAcess.csproj">
