--- a/WebAPI/Web.config
+++ b/WebAPI/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="CONN_STRING" connectionString="Data Source=.;Initial Catalog=PROYECTOBR;Integrated Security=True" />
+    <add name="CONN_STRING" connectionString="Server=tcp:techhouse.database.windows.net,1433;Initial Catalog=PROYECTOBR;Persist Security Info=False;User ID=adminbr;Password=techhouse1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
