Adición de Propiedades (Stuart), correción de controlador, adición de vista de perfil de admin (incompleto)

--- a/DataAcess/DataAcess.csproj
+++ b/DataAcess/DataAcess.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Crud\CustomerCrudFactory.cs" />
     <Compile Include="Crud\CrudFactory.cs" />
     <Compile Include="Crud\ListOptionCrudFactory.cs" />
+    <Compile Include="Crud\PropiedadCrudFactory.cs" />
     <Compile Include="Crud\UserProfileCrudFactory.cs" />
     <Compile Include="Crud\UsuarioCrudFactory.cs" />
     <Compile Include="Mapper\AppMessageMapper.cs" />
@@ -54,6 +55,7 @@
     <Compile Include="Mapper\IObjectMapper.cs" />
     <Compile Include="Mapper\ISqlStaments.cs" />
     <Compile Include="Mapper\ListOptionMapper.cs" />
+    <Compile Include="Mapper\PropiedadMapper.cs" />
     <Compile Include="Mapper\UserProfileMapper.cs" />
     <Compile Include="Mapper\UsuarioMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
