--- a/CoreAPI/CoreAPI.csproj
+++ b/CoreAPI/CoreAPI.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BaseManager.cs" />
     <Compile Include="ListManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropiedadManager.cs" />
     <Compile Include="UserProfileManager.cs" />
     <Compile Include="UsuarioManager.cs" />
   </ItemGroup>
