--- a/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ListController.cs" />
+    <Compile Include="Controllers\PropiedadController.cs" />
     <Compile Include="Controllers\SignInController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="ExceptionFilter.cs" />
