--- a/WebAppLogin/WebApp.csproj
+++ b/WebAppLogin/WebApp.csproj
@@ -150,7 +150,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\PerfilesControler.cs" />
+    <Compile Include="Controllers\PerfilesController.cs" />
     <Compile Include="Controllers\RegistrosController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -215,6 +215,7 @@
     <Content Include="Scripts\Views\vCustomers.js" />
     <Content Include="Scripts\Views\vIndex.js" />
     <Content Include="Scripts\Views\vPerfil_Administrador.js" />
+    <Content Include="Scripts\Views\vPropiedades.js" />
     <Content Include="Scripts\Views\vReg_Admin.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -235,6 +236,7 @@
     <Content Include="Scripts\moment-with-locales.min.js.map" />
     <Content Include="Views\Perfiles\vPerfil_Administrador.cshtml" />
     <Content Include="Views\Perfiles\vPerfil_Admin_Suscripciones.cshtml" />
+    <Content Include="Views\Perfiles\vPropiedades.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
