--- a/Entities-POJO/Entities-POJO.csproj
+++ b/Entities-POJO/Entities-POJO.csproj
@@ -35,6 +35,7 @@
       <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web.Cors, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.Cors.5.2.7\lib\net45\System.Web.Cors.dll</HintPath>
@@ -49,6 +50,7 @@
   <ItemGroup>
     <Compile Include="ApplicationMessage.cs" />
     <Compile Include="BaseEntity.cs" />
+    <Compile Include="Cuenta.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="ObjectDumper.cs" />
     <Compile Include="OptionList.cs" />
