--- a/WebAppLogin/WebApp.csproj
+++ b/WebAppLogin/WebApp.csproj
@@ -151,6 +151,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PerfilesController.cs" />
+    <Compile Include="Controllers\RegistrarController.cs" />
     <Compile Include="Controllers\RegistrosController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -220,6 +221,7 @@
     <Content Include="Scripts\Views\vIndex.js" />
     <Content Include="Scripts\Views\vPerfil_Administrador.js" />
     <Content Include="Scripts\Views\vPropiedades.js" />
+    <Content Include="Scripts\Views\vPropietarios.js" />
     <Content Include="Scripts\Views\vReg_Admin.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -241,6 +243,13 @@
     <Content Include="Views\Perfiles\vPerfil_Administrador.cshtml" />
     <Content Include="Views\Perfiles\vPerfil_Admin_Suscripciones.cshtml" />
     <Content Include="Views\Perfiles\vPropiedades.cshtml" />
+    <Content Include="Views\Registrar\_RegistrarAdministrador.cshtml" />
+    <Content Include="Views\Registrar\_RegistrarBanco.cshtml" />
+    <Content Include="Views\Registrar\_RegistrarUsuarioFinal.cshtml" />
+    <Content Include="Views\Home\AccountProfile.cshtml" />
+    <Content Include="Views\Home\RegistrarCuenta.cshtml" />
+    <Content Include="Views\Shared\_LayoutRegistrarCuenta.cshtml" />
+    <Content Include="Views\Registrar\vPropietarios.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
