--- a/Entities-POJO/Entities-POJO.csproj
+++ b/Entities-POJO/Entities-POJO.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="ApplicationMessage.cs" />
     <Compile Include="BaseEntity.cs" />
+    <Compile Include="Agencia.cs" />
     <Compile Include="Cuenta.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="ObjectDumper.cs" />
