--- a/Entities-POJO/Entities-POJO.csproj
+++ b/Entities-POJO/Entities-POJO.csproj
@@ -54,8 +54,10 @@
     <Compile Include="Customer.cs" />
     <Compile Include="ObjectDumper.cs" />
     <Compile Include="OptionList.cs" />
+    <Compile Include="Pago.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Propiedad.cs" />
+    <Compile Include="Suscripcion.cs" />
     <Compile Include="UserProfile.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
