--- a/CoreAPI/packages.config
+++ b/CoreAPI/packages.config
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.IdentityModel.Logging" version="1.1.2" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.1.2" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.12.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.12.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.12.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="NUnit" version="3.13.2" targetFramework="net472" />
+  <package id="NUnit3TestAdapter" version="4.0.0" targetFramework="net472" />
   <package id="SendGrid" version="9.24.1" targetFramework="net472" />
   <package id="starkbank-ecdsa" version="1.3.1" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.2" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.12.0" targetFramework="net472" />
   <package id="Twilio" version="5.64.1" targetFramework="net472" />
 </packages>
