Commit con suscripciones admin

--- a/CoreAPI/CoreAPI.csproj
+++ b/CoreAPI/CoreAPI.csproj
@@ -69,6 +69,7 @@
     <Compile Include="BaseManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropiedadManager.cs" />
+    <Compile Include="SuscripcionManager.cs" />
     <Compile Include="UsuarioManager.cs" />
   </ItemGroup>
   <ItemGroup>
