--- a/DataAcess/DataAcess.csproj
+++ b/DataAcess/DataAcess.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Crud\CrudFactory.cs" />
     <Compile Include="Crud\ListOptionCrudFactory.cs" />
     <Compile Include="Crud\PropiedadCrudFactory.cs" />
+    <Compile Include="Crud\SuscripcionCrudFactory.cs" />
     <Compile Include="Crud\UsuarioCrudFactory.cs" />
     <Compile Include="Mapper\AccountMapper.cs" />
     <Compile Include="Mapper\AppMessageMapper.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="Mapper\ISqlStaments.cs" />
     <Compile Include="Mapper\ListOptionMapper.cs" />
     <Compile Include="Mapper\PropiedadMapper.cs" />
+    <Compile Include="Mapper\SuscripcionMapper.cs" />
     <Compile Include="Mapper\UsuarioMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Dao\SqlDao.cs" />
