Commit con integracion

--- a/WebAppLogin/WebApp.csproj
+++ b/WebAppLogin/WebApp.csproj
@@ -240,6 +240,7 @@
     <Content Include="Scripts\Views\vRegistrarBanco.js" />
     <Content Include="Scripts\Views\vRegistrarUsuarioFinal.js" />
     <Content Include="Scripts\Views\vReg_Admin.js" />
+    <Content Include="Scripts\Views\vSuscripcionAdmin.js" />
     <Content Include="Views\Home\vIndex.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -268,6 +269,7 @@
     <Content Include="Views\Registrar\vPropietarios.cshtml" />
     <Content Include="Views\Perfiles\AccountProfile.cshtml" />
     <Content Include="Views\Perfiles\UsuarioProfile.cshtml" />
+    <Content Include="Views\Perfiles\vSuscripcionAdmin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
