--- a/WebAppLogin/WebApp.csproj
+++ b/WebAppLogin/WebApp.csproj
@@ -230,6 +230,7 @@
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\Views\ControlActions.js" />
+    <Content Include="Scripts\Views\vRegistrarAgencia.js" />
     <Content Include="Scripts\Views\vPerfilBanco.js" />
     <Content Include="Scripts\Views\vRegistrarCuenta.js" />
     <Content Include="Scripts\Views\vCustomers.js" />
@@ -270,6 +271,7 @@
     <Content Include="Views\Perfiles\AccountProfile.cshtml" />
     <Content Include="Views\Perfiles\UsuarioProfile.cshtml" />
     <Content Include="Views\Perfiles\vSuscripcionAdmin.cshtml" />
+    <Content Include="Views\Registrar\vRegistrarAgencia.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
