--- a/WebAppLogin/WebApp.csproj
+++ b/WebAppLogin/WebApp.csproj
@@ -230,7 +230,8 @@
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\Views\ControlActions.js" />
-    <Content Include="Scripts\Views\vPerfilBanco.js" />
+    <Content Include="Scripts\Views\UsuarioProfile.js" />
+    <Content Include="Scripts\Views\AccountProfile.js" />
     <Content Include="Scripts\Views\vRegistrarCuenta.js" />
     <Content Include="Scripts\Views\vCustomers.js" />
     <Content Include="Scripts\Views\vIndex.js" />
