--- a/WebAppLogin/packages.config
+++ b/WebAppLogin/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="5.0.2" targetFramework="net472" />
   <package id="jQuery" version="3.6.0" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.3" targetFramework="net472" />
+  <package id="log4net" version="2.0.12" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights" version="2.18.0" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.18.0" targetFramework="net472" />
@@ -23,6 +24,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Moment.js" version="2.29.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="PayPal" version="1.9.1" targetFramework="net472" />
   <package id="Respond" version="1.4.2" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.1" targetFramework="net472" />
